--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.16.0
+  flutter_html_view: ^0.5.11
+  getwidget: ^1.2.2
 
   cupertino_icons: ^0.1.3
   material_design_icons_flutter: 4.0.5345
@@ -24,6 +27,6 @@ dev_dependencies:
 
 flutter:
   assets:
-    - assets/images/jagersro.jpg
+    - assets/images/
 
   uses-material-design: true
